hphp/hack/test/typecheck/reactive/mut_collections/mutable_in_collections1.php.exp
File "mutable_in_collections1.php", line 7, characters 15-16:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 8, characters 16-17:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 9, characters 16-17:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 10, characters 20-21:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 11, characters 20-21:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 12, characters 23-24:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 14, characters 21-22:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 19, characters 15-16:
This variable is maybe mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4258])
File "mutable_in_collections1.php", line 20, characters 16-17:
This variable is maybe mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4258])
File "mutable_in_collections1.php", line 21, characters 16-17:
This variable is maybe mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4258])
File "mutable_in_collections1.php", line 22, characters 20-21:
This variable is maybe mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4258])
File "mutable_in_collections1.php", line 23, characters 20-21:
This variable is maybe mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4258])
File "mutable_in_collections1.php", line 24, characters 23-24:
This variable is maybe mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4258])
File "mutable_in_collections1.php", line 26, characters 21-22:
This variable is maybe mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4258])
File "mutable_in_collections1.php", line 31, characters 15-16:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 32, characters 16-17:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 33, characters 16-17:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 34, characters 20-21:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 35, characters 20-21:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 36, characters 23-24:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
File "mutable_in_collections1.php", line 38, characters 21-22:
This variable is mutable. You cannot create a new reference to it by putting it into the collection. (Typing[4210])
